Swagger funcional En LINUX M
